--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
     </div>
   </div>
 
-<script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+  <script src="scripts.js" charset="utf-8"></script>
 
-</script>
 </body>
 </html>
